--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   box-sizing: border-box;
 }
@@ -6,7 +10,8 @@ body {
   margin: 0;
   font-family: sans-serif;
   color: #252525;
-  background-color: #252525;
+  background-color: #000000;
+  margin: 0 auto;
 }
 
 button {
@@ -23,4 +28,19 @@ button:hover,
 button:active {
   background-color: #5b14ac;
   border-color: #5b14ac;
+}
+
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 8px solid;
+  border-color: #000 #0000;
+  animation: l1 1s infinite;
+  text-align: center;
+}
+@keyframes l1 {
+  to {
+    transform: rotate(0.5turn);
+  }
 }
